Added Account Statement

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,3 @@
-VITE_BASE_URL = "http://52.248.88.45:3001/api/"
+# VITE_BASE_URL = "http://52.248.88.45:3001/api/"
+VITE_BASE_URL = "http://172.16.8.122:3003/api/"
+# VITE_BASE_URL = "http://localhost:3003/api/"
