Account Statement Changes, Env Changed and Payment Status Changed

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-VITE_BASE_URL = "http://52.248.88.45:3001/api/"
+VITE_BASE_URL = "http://customerportal7.southcentralus.azurecontainer.io:3001/api/"
+
